--- a/allsacapp/pom.xml
+++ b/allsacapp/pom.xml
@@ -7,6 +7,17 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>allsacapp Maven Webapp</name>
   <url>http://maven.apache.org</url>
+	
+	<repositories>
+  <repository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/libs-milestone</url>
+      <snapshots>
+          <enabled>false</enabled>
+      </snapshots>
+  </repository>
+</repositories>
   
   <properties>
   
